@@ -1,3 +1,11 @@
+2008-05-09  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/nm-connection-editor.c: Show error dialog
+	if updating connection fails.
+
+	* src/connection-editor/nm-connection-list.c: Show error dialog
+	if adding or removing connection fails.
+
 2008-05-02  Tambet Ingo  <tambet@gmail.com>
 
 	Use PolicyKit to authorize the system connection handling.
